--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The best way to watch videos.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jibumgu/wetube-reloaded.git"
+    "url": "git+https://github.com/jibumgu/wetube.git"
   },
   "scripts": {
     "dev": "nodemon --exec babel-node src/server.js"
@@ -12,9 +12,9 @@
   "author": "nemgu",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jibumgu/wetube-reloaded/issues"
+    "url": "https://github.com/jibumgu/wetube/issues"
   },
-  "homepage": "https://github.com/jibumgu/wetube-reloaded#readme",
+  "homepage": "https://github.com/jibumgu/wetube#readme",
   "dependencies": {
     "express": "^4.18.2",
     "morgan": "^1.10.0",
